--- a/backend/package.json
+++ b/backend/package.json
@@ -9,19 +9,24 @@
     "signaling": "node signaling-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["ai", "challenge", "webrtc", "realtime"],
+  "keywords": [
+    "ai",
+    "challenge",
+    "webrtc",
+    "realtime"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.5.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
     "openai": "^4.0.0",
-    "express-validator": "^7.0.1",
     "socket.io": "^4.6.0"
   },
   "devDependencies": {
